--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,20 @@
   "description": "AI-powered email management frontend",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "axios": "^1.6.0",
-    "zustand": "^4.4.0",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "recharts": "^3.6.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
